dc/s2n-quic-dc/src/snapshots/stream__reader__tests__read_message_multi_frame.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG Reader dropping stream_id=1 status=Open final_size=None consumed_len=20 total_received_len=20 is_writing_complete=false is_reading_complete=false
0:00:00.000000000 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING stream_id=1
