dc/s2n-quic-dc/src/snapshots/stream__reader__tests__read_to_end_empty_buffer_returns_buffer_full.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.release.bytes=5
0 [main] TRACE c#credit.release.calls=1
0 [main] DEBUG Reader dropping binding_id=1 status=Init final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
0 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
0 [main] TRACE c#credit.release.bytes=1048571
0 [main] TRACE c#credit.release.calls=1
