dc/s2n-quic-dc/src/snapshots/stream__reader__tests__read_to_end_full_buffer_returns_buffer_full.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.release.bytes=5
0 [main] TRACE c#credit.release.calls=1
0 [main] DEBUG event=on_received prev=Init next=Open location=dc/s2n-quic-dc/src/stream/reader.rs
0 [main] DEBUG Reader dropping binding_id=1 status=Open final_size=Some(5) consumed_len=1 total_received_len=5 is_writing_complete=true is_reading_complete=false
0 [main] TRACE c#credit.release.bytes=1048571
0 [main] TRACE c#credit.release.calls=1
